--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^4.2.0",
     "vue": "^2.4.2",
     "vue-router": "^2.3.1",
-    "vuetify": "^0.14.7"
+    "vuetify": "^0.14.7",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
