--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^4.2.0",
     "vue": "^2.4.2",
     "vue-router": "^2.3.1",
+    "vue-socket.io": "^2.1.1-a",
     "vuetify": "^0.14.7",
     "vuex": "^2.3.1"
   },
